# Labs

./: .gitignore
fifth_sem/: SEM PLAN.odt
fifth_sem/IGI/WEB_953504_KARPOVICH/: WEB_953504_KARPOVICH.sln
fifth_sem/IGI/Презентации/: 1_2_Знакомство с Web приложением.pptx  1_3_HTML.pptx  1_4_Стили.pptx  1_5_Обзор Bootstrap.pptx  2_1_Платформа ASP.NET MVC.pptx  2_2_Структура приложения.pptx  2_3_Контроллеры.pptx  3_1_Представления_часть1.pptx  4_1_Внедрение зависимостей.pptx
fifth_sem/SYSTEM_PROG/Lab1/: Lab1.cpp
fifth_sem/SYSTEM_PROG/Lab2/: Lab2.cpp
fifth_sem/SYSTEM_PROG/Lab3/: Lab3.cpp
fifth_sem/SYSTEM_PROG/Lab4/: Lab4.cpp
fifth_sem/SYSTEM_PROG/Lab7/: Lab7.cpp
first_sem/CPP/lab3/: individual_1_block.afc  individual_2_block.afc  individual_3_block.afc
first_sem/CPP/lab4/: individual_1_block.afc  individual_2_block.afc  individual_3_block.afc
first_sem/CPP/lab5/newRAR/test_dynamic/: CMakeLists.txt  generate_solution.py
first_sem/CPP/lab5/newRAR/test_dynamic/src/: CMakeLists.txt
first_sem/CPP/lab5/newRAR/test_dynamic/src/dynamic_lib_project_name/: CMakeLists.txt  dynamic_lib.cpp  dynamic_lib.h
first_sem/CPP/lab5/newRAR/test_dynamic/src/main_project_name/: CMakeLists.txt  main.cpp
first_sem/CPP/lab8/: individual_1_block.drawio
fourth_sem/DSA/: task  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15  task15.cpp  task16.py  task17.cpp  task19.cpp  task2  task2.cpp  task4.cpp  task5.cpp  task6.cpp  task7  task7.cpp  task8  task8.cpp  task9.cpp
fourth_sem/ISP_Python/: README.md
fourth_sem/ISP_Python/lab1/: Dockerfile  GetSize.py  Walk.py  script.py
fourth_sem/ISP_Python/lab2/: data.json  data.yaml  data1.json  factory.py  human_data.pickle  main.py  serialize-test.txt  serializer.py  test_class.json  test_class.pickle  test_classes.py  (+2 more)
third_sem/CSharp/: Sales_2020_03_29_00_12_15.txt  Sales_2021_06_31_12_59_00.txt
(+1743 files in other folders)
